--- a/app.json
+++ b/app.json
@@ -7,14 +7,14 @@
     "env": {
         "UUID": {
             "description": "V2Ray UUID",
-            "value": "ce7ea10b-5b27-49ab-a93d-6b184df9cce9"
+            "value": "71ce4b70-15a3-4a72-ab20-b73dd178086b"
         },
         "TUNNEL_TOKEN": {
             "description": "Cloudflare Tunnel Token",
             "required": false
         }
     },
-    "website": "https://github.com/zizifn/v2ray-heroku",
-    "repository": "https://github.com/zizifn/v2ray-heroku",
+    "website": "https://github.com/machuanhu-hub/v-20220418",
+    "repository": "https://github.com/machuanhu-hub/v-20220418",
     "stack": "container"
 }
